--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "rm -rf dist/ && tsc && node dist/index.js",
+		"build": "tsc",
+		"dev": "ts-node-dev src/index.ts",
+		"typechain": "typechain --target=web3-v1"
 	},
-	"author": "",
+	"author": "fourwadu",
 	"license": "ISC",
 	"devDependencies": {
 		"@types/node": "^16.7.2",
 		"ts-node": "^10.2.1",
 		"tslib": "^2.3.1",
-		"typescript": "^4.3.5"
+		"typescript": "^4.4.2"
 	},
 	"dependencies": {
-		"@flashbots/ethers-provider-bundle": "git+https://github.com/flashbots/ethers-provider-flashbots-bundle",
+		"@flashbots/ethers-provider-bundle": "^0.4.1",
 		"dotenv": "^10.0.0",
-		"ethers": "5.4.5"
+		"ethers": "5.4.5",
+		"typechain": "^5.1.2",
+		"web3": "^1.5.2"
 	}
 }
