--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "rm -rf dist/ && tsc && node dist/index.js",
+		"start": "rm -rf dist/ && tsc && node dist/src/index.js",
 		"build": "tsc",
-		"dev": "ts-node-dev src/index.ts",
-		"typechain": "typechain --target=web3-v1"
+		"dev": "ts-node-dev src/index.ts"
 	},
 	"author": "fourwadu",
 	"license": "ISC",
@@ -20,8 +19,12 @@
 	},
 	"dependencies": {
 		"@flashbots/ethers-provider-bundle": "^0.4.1",
+		"@typechain/ethers-v5": "^7.0.1",
+		"consola": "^2.15.3",
 		"dotenv": "^10.0.0",
 		"ethers": "5.4.5",
+		"path": "^0.12.7",
+		"ts-node-dev": "^1.1.8",
 		"typechain": "^5.1.2",
 		"web3": "^1.5.2"
 	}
