--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
 	"dependencies": {
 		"@flashbots/ethers-provider-bundle": "^0.4.1",
 		"@typechain/ethers-v5": "^7.0.1",
+		"@types/inquirer": "^8.1.1",
 		"consola": "^2.15.3",
 		"dotenv": "^10.0.0",
 		"ethers": "5.4.5",
+		"inquirer": "^8.1.5",
 		"path": "^0.12.7",
 		"ts-node-dev": "^1.1.8",
 		"typechain": "^5.1.2",
