--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "rm -rf dist/ && tsc && node dist/index.js",
+		"start": "rm -rf dist/ && tsc && node dist/src/index.js",
 		"build": "tsc",
 		"dev": "ts-node-dev src/index.ts"
 	},
