--- a/data/config.json
+++ b/data/config.json
@@ -1,8 +1,8 @@
 {
-	"address": "0x4eb28031a54e8e789cd09feb7e79078fbe23b028",
+	"address": "0xd455550af4a7558b0beec5eaec2cc415c4ff4039",
 	"method": "mint",
-	"arg": 1,
-	"value": 0.02,
-	"gas": 70,
-	"quantity": 2
+	"arg": null,
+	"value": 0.1312,
+	"gas": 1000,
+	"quantity": 1
 }
